Fixed overflow in credits UI

--- a/styles/credits.css
+++ b/styles/credits.css
@@ -17,15 +17,17 @@
 }
 
 * {
-    padding: 0;
     margin: 0;
-}
+    padding: 0;
+    /* box-sizing: content-box; */
+  }
 
 html {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     overflow-x: hidden;
     background-color: black;
+    /* font-size: 62.5%; */
 }
 
 body {
@@ -139,8 +141,6 @@ body {
     display: flex;
     border-top: 3px solid var(--OTwhiteT);
     width: 100%;
-    /* margin: auto; */
-    /* padding: 0 10px 0 10px; */
     z-index: 2;
     justify-content: space-between;
     align-items: center;
@@ -149,11 +149,6 @@ body {
 
 .footer h4 {
     padding: 10px 0 10px 10px;
-}
-
-.buttons {
-    display: flex;
-    justify-content: flex-end;
 }
 
 .button {
@@ -179,15 +174,20 @@ a {
     gap:0;
     width: 100%;
     background-color: var(--OTbeige);
-    padding: 0 10px 0 10px;
+    /* padding: 0 10px 0 10px; */
     border-top: 3px solid var(--OTwhiteT);
     color: var(--OTblack);
     font-size: 0.8rem;
     text-align: center;
 }
 
+.square h3 {
+    padding: 0 10px 0 10px;
+}
+
 .spacer{
     height: 60px;
+    width: 100%;
 }
 
 .square{
@@ -249,3 +249,7 @@ a {
 
     }
 }
+
+* {
+    outline: 1px solid #f00 !important;
+  }
